--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 logo: AppIcon_120x120.png
 theme: jekyll-theme-cayman
+title: NESC 3505 Neural Data Science
+description: Official site for teh course offered by the Department of Psychology & Neuroscience, Dalhousie University
