--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-logo: AppIcon_120x120.png
+logo: NESC3505_icon.png
 theme: jekyll-theme-cayman
 title: NESC 3505 Neural Data Science
-description: Official site for teh course offered by the Department of Psychology & Neuroscience, Dalhousie University
+description: Official site for the course offered by the Department of Psychology & Neuroscience, Dalhousie University.
