--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ logo: NESC3505_icon.png
 theme: jekyll-theme-cayman
 title: NESC 3505 Neural Data Science
 description: Official site for the course offered by the Department of Psychology & Neuroscience, Dalhousie University.
+# Google Analytics
+google_analytics: UA-171426664-1
