updated google analytics tag for GA4

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ theme: jekyll-theme-cayman
 title: NESC 3505 Neural Data Science
 description: Official site for the course offered by the Department of Psychology & Neuroscience, Dalhousie University.
 # Google Analytics
-google_analytics: UA-171426664-1
+google_analytics: G-4LPX77N458
